--- a/History.html
+++ b/History.html
@@ -10,7 +10,7 @@
 		<div class="navbar">
 			<img src="knight.png" class="logo" width="" height="80">
 			<ul>
-				<li><a href="Indexx.html">Home</a></li>
+				<li><a href="Index.html">Home</a></li>
 				<li><a href="History.html">Background</a></li>
 				<li><a href="Pieces.html">Pieces</a></li>
 				<li><a href="Gameplay & rules.html">Gameplay & Rules</a></li>
