--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
 		<div class="navbar">
 			<img src="knight.png" class="logo" width="" height="80">
 			<ul>
-				<li><a href="Index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li><a href="History.html">Background</a></li>
 				<li><a href="Pieces.html">Pieces</a></li>
 				<li><a href="Gameplay & rules.html">Gameplay & Rules</a></li>
