--- a/Gameplay & Rules.html
+++ b/Gameplay & Rules.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Gameplay & Rules</title>
-<link href="Styleeee.css" rel="stylesheet" type="text/css">
+<link href="GNR.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<div class="banner">
