Update Gameplay & Rules.html

--- a/Gameplay & Rules.html
+++ b/Gameplay & Rules.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gameplay & Rules</title>
+<title>Gameplay &amp; Rules</title>
 <link href="GNR.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -13,13 +13,13 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="History.html">Background</a></li>
 				<li><a href="Pieces.html">Pieces</a></li>
-				<li><a href="Gameplay & rules.html">Gameplay & Rules</a></li>
+				<li><a href="Gameplay & rules.html">Gameplay &amp; Rules</a></li>
 				<li><a href="https://www.chess.com" target="_blank" style="text-decoration: none;">Play Online</a></li>
 				<li><a href="Download.html">Download </a></li>
 			</ul>
 			</div>
 		<div class="content">
-			<h1>Gameplay & Rules</h1>
+			<h1>Gameplay &amp; Rules</h1>
 		<p> Some of the rules of chess and <br> how are they played. </p>
 			<div class="historybg"></div>
 			<div class="history">
