--- a/History.html
+++ b/History.html
@@ -13,7 +13,7 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="History.html">Background</a></li>
 				<li><a href="Pieces.html">Pieces</a></li>
-				<li><a href="Gameplay & rules.html">Gameplay & Rules</a></li>
+				<li><a href="Gameplay & rules.html">Gameplay &amp; Rules</a></li>
 				<li><a href="https://www.chess.com" target="_blank" style="text-decoration: none;">Play Online</a></li>
 				<li><a href="Download.html">Download </a></li>
 			</ul>
