Update Gameplay & Rules.html

--- a/Gameplay & Rules.html
+++ b/Gameplay & Rules.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="banner">
 		<div class="navbar">
-			<img src="knight.png" class="logo" width="" height="80">
+			<img src="knight.png" class="logo" width=""y height="80">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="History.html">Background</a></li>
@@ -31,7 +31,7 @@
 					<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Here is a video to explain it further:</p>
 				</div>
 			  <div class="container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/TUueodWAXNY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<iframe width="560" height="315" src="https://www.youtube.com/embed/TUueodWAXNY" title="Rules of Chess #11 Checkmate - Elliott Neff Chess4Life" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 				<br>
 				  <br>
 				  <hr>
@@ -44,8 +44,7 @@
 				<div class="explanation">
 					<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Here is a video to explain it further:</p>
 					<div class="container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/xiSZmAnEtik" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>	
-				</div>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/xiSZmAnEtik" title="Rules of Chess #12 en Passant - Elliott Neff Chess4Life" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>				</div>
 					<br>
 					<br>
 					<hr>
@@ -61,8 +60,7 @@
 				<div class="explanation">
 					<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Here is a video to explain it further:</p>
 					<div class="container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/gmKIZvnQE1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-					</div>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/gmKIZvnQE1A" title="Rules of Chess #13 Castling - Elliott Neff Chess4Life" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>					</div>
 					<br>
 					<br>
 					<hr>
@@ -73,8 +71,7 @@
 					<div class="explanation">
 					<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Here is a video to explain it further:</p>
 					<div class="container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/T-iIaP2_T0k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-						<br>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/T-iIaP2_T0k" title="Rules of Chess #14 Draws - Elliott Neff Chess4Life" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>						<br>
 						<br>
 						<hr>
 						<br>
@@ -86,8 +83,7 @@
 						<div class="explanation">
 					<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;Here is a video to explain it further:</p>
 					<div class="container">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/iswnLiBUzAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-						<br>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/iswnLiBUzAY" title="Rules of Chess #10 Pawn Promotion - Elliott Neff Chess4Life" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>						<br>
 						<br>
 						</div> 
 					</div>
