--- a/Gameplay & Rules.html
+++ b/Gameplay & Rules.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="banner">
 		<div class="navbar">
-			<img src="knight.png" class="logo" width=""y height="80">
+			<img src="knight.png" class="logo" width="80"y height="80">
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="History.html">Background</a></li>
