--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Try</title>
+<title>Home</title>
 <link href="Stylee.css" rel="stylesheet" type="text/css">
 
 </head>
