--- a/Gameplay and rules.html
+++ b/Gameplay and rules.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gameplay &amp; Rules</title>
+<title>Gameplay & Rules</title>
 <link href="GNR.css" rel="stylesheet" type="text/css">
 </head>
 <body>
