--- a/History.html
+++ b/History.html
@@ -53,7 +53,7 @@
 				<p>Deeper insight into the nature of chess came with two younger players. American Paul Morphy, an extraordinary chess prodigy, won against all important competitors, including Anderssen, during his short chess career between 1857 and 1863. Morphy's success stemmed from a combination of brilliant attacks and sound strategy; he intuitively knew how to prepare attacks. Prague-born Wilhelm Steinitz later described how to avoid weaknesses in one's own position and how to create and exploit such weaknesses in the opponent's position. In addition to his theoretical achievements, Steinitz founded an important tradition: his triumph over the leading Polish-German master Johannes Zukertort in 1886 is regarded as the first official World Chess Championship. Steinitz lost his crown in 1894 to a much younger German mathematician Emanuel Lasker, who maintained this title for 27 years, the longest tenure of all World Champions.</p>
 				<p>It took a prodigy from Cuba, José Raúl Capablanca (World champion 1921–27), who loved simple positions and endgames, to end the German-speaking dominance in chess; he was undefeated in tournament play for eight years until 1924. His successor was Russian-French Alexander Alekhine, a strong attacking player, who died as the World champion in 1946, having briefly lost the title to Dutch player Max Euwe in 1935, regaining it two years later.</p>
 				<figure>
-				<img src="Capablanca.jpg" width="400" height="100%" alt="capablanca" title="capablanca">
+				<img src="capablanca.jpg" width="400" height="100%" alt="capablanca" title="capablanca">
 					<figcaption>
 						<h4> World Champions José Raúl Capablanca (left) and Emanuel Lasker in 1925</h4>
 					</figcaption>
