--- a/Download.html
+++ b/Download.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="banner">
+		<!--This div is for the banner to help the code distinguished that this is for the navbar-->
 		<div class="navbar">
 			<img src="knight.png" class="logo" width="" height="80">
 			<ul>
@@ -18,10 +19,12 @@
 				<li><a href="Download.html">Download </a></li>
 			</ul>
 		</div>
+			<!--this class is for the displaying of the content-->
 		<div class="content">
 			<h1>Download Now</h1>
 		<p> Download Chess in your device now.<br>Click the OS of your device. </p>
 		<div>
+			<!--I used the button function to display the link as a button that will lead the user to another tab containing the page where they can download chess-->
 			<button type="button"> <a href="https://www.microsoft.com/en-us/p/3d-chess-game/9wzdncrfhx51?activetab=pivot:overviewtab" target="_blank" style="text-decoration: none;"><span></span> WINDOWS </a></button>
 			<button type="button"><a href="https://apps.apple.com/us/app/chess-online/id1004345695?mt=12" target="_blank" style="text-decoration: none;"><span></span> MAC </a></button>
 			<button type="button"><a href="https://store.steampowered.com/app/312280/Simply_Chess/" target="_blank" style="text-decoration: none;"><span></span> Steam OS + LINUX </a></button><br>
