--- a/History.html
+++ b/History.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="banner">
 		<div class="navbar">
+				<!--This div is for the banner to help the code distinguished that this is for the navbar-->
 			<img src="knight.png" class="logo" width="" height="80">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -18,12 +19,14 @@
 				<li><a href="Download.html">Download </a></li>
 			</ul>
 		</div>
+		<!--this class is for the displaying of the content-->
 		<div class="content">
 			<h1>Background</h1>
 			<p> Learn the history, origin, and the birth of the<br>1500 year-old game. </p>
 			<div class="historybg"></div>
 			<div class="history">
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<div class="chaturanga"><img src="chaturanga.png" width="400" height="100%" alt="old chess" title="Chaturanga">
 					</div>
 					<figcaption>
@@ -34,6 +37,7 @@
 		<br>
 		<h1> History </h1>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="chessmen.jpg" width="400" height="100%" alt="old chessmen" title="lewis chessmen">
 					<figcaption>
 						<h4> The 12th-century Lewis chessmen in the collection of the National Museum of Scotland </h4>
@@ -44,7 +48,8 @@
 				<br>
 				<h1> The Birth </h1>
 				<p>The first modern chess tournament was held in London in 1851 and won, surprisingly, by German Adolf Anderssen, who was relatively unknown at the time. Anderssen was hailed as the leading chess master, and his brilliant, energetic attacking style became typical for the time, although it was retrospectively regarded as strategically shallow. Sparkling games like Anderssen's Immortal game and Evergreen Game or Morphy's Opera game were regarded as the highest possible summit of the chess art.</p>
-				<figure>
+				<figure>				
+				<!-- I used img function to display the image in the site-->
 				<img src="https://upload.wikimedia.org/wikipedia/commons/b/b2/Wilhelm_Steinitz2.jpg" width="400" height="100%" alt="steinitz" title="first world chess champion">
 					<figcaption>
 						<h4> Wilhelm Steinitz, the first official World Chess Champion</h4>
@@ -53,6 +58,7 @@
 				<p>Deeper insight into the nature of chess came with two younger players. American Paul Morphy, an extraordinary chess prodigy, won against all important competitors, including Anderssen, during his short chess career between 1857 and 1863. Morphy's success stemmed from a combination of brilliant attacks and sound strategy; he intuitively knew how to prepare attacks. Prague-born Wilhelm Steinitz later described how to avoid weaknesses in one's own position and how to create and exploit such weaknesses in the opponent's position. In addition to his theoretical achievements, Steinitz founded an important tradition: his triumph over the leading Polish-German master Johannes Zukertort in 1886 is regarded as the first official World Chess Championship. Steinitz lost his crown in 1894 to a much younger German mathematician Emanuel Lasker, who maintained this title for 27 years, the longest tenure of all World Champions.</p>
 				<p>It took a prodigy from Cuba, José Raúl Capablanca (World champion 1921–27), who loved simple positions and endgames, to end the German-speaking dominance in chess; he was undefeated in tournament play for eight years until 1924. His successor was Russian-French Alexander Alekhine, a strong attacking player, who died as the World champion in 1946, having briefly lost the title to Dutch player Max Euwe in 1935, regaining it two years later.</p>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="capablanca.jpg" width="400" height="100%" alt="capablanca" title="capablanca">
 					<figcaption>
 						<h4> World Champions José Raúl Capablanca (left) and Emanuel Lasker in 1925</h4>
