--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 	<div class="banner">
 		<div class="navbar">
+		<!--This div is for the banner to help the code distinguished that this is for the navbar-->
 			<img src="knight.png" class="logo" width="" height="80">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -19,10 +20,12 @@
 				<li><a href="Download.html">Download </a></li>
 			</ul>
 		</div>
+		<!--this class is for the displaying of the content-->
 		<div class="content">
 			<h1>Play like a Grandmaster</h1>
 		<p> Learn Openings, Watch Streams, Know the History, Gameplay and Rules of a <br>1500 year-old game. </p>
 		<div>
+			<!--I used the button function to display the link as a button that will lead the user to another tab containing the page where they can download chess-->
 			<button type="button"> <a href="https://www.twitch.tv/chess" target="_blank" style="text-decoration: none;"><span></span>Watch Streams</a></button>
 			<button type="button"><a href="https://www.youtube.com/watch?v=rmbU97iftC8&list=PLBRObSmbZluTpMdP-rUL3bQ5GA8v4dMbT&pp=iAQB" target="_blank" style="text-decoration: none;"><span></span> Learn Openings</a></button>
 			</div>
