--- a/Pieces.html
+++ b/Pieces.html
@@ -8,6 +8,7 @@
 <body>
 	<div class="banner">
 		<div class="navbar">
+	     <!--This div is for the banner to help the code distinguished that this is for the navbar-->
 			<img src="knight.png" class="logo" width="" height="80">
 			<ul>
 				<li><a href="index.html">Home</a></li>
@@ -24,6 +25,7 @@
 			<div class="historybg"></div>
 			<div class="history">
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="https://i.shgcdn.com/40a3176a-0a07-4570-ae5b-3355b98ef27c/-/format/auto/-/preview/3000x3000/-/quality/lighter/" width="400" height="100%" alt="pawns" title="8 pawns" class="center">
 					<figcaption>
 						<h4>Pawns</h4>
@@ -32,6 +34,7 @@
 				<p>the Pawn moves one square straight ahead; can also move 2 squares from where it seats.</p>
 				<br>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="https://i.shgcdn.com/8ec107dd-c771-44a1-9e9f-e590004fd240/-/format/auto/-/preview/3000x3000/-/quality/lighter/" width="400" height="100%" alt="rooks" title="2 rooks" class="center">
 					<figcaption>
 						<h4>Rooks</h4>
@@ -40,6 +43,7 @@
 				<p>the Rook can move in its line or row.</p>
 				<br>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="https://i.shgcdn.com/0e34d67a-6873-4105-a2f7-4fd72f175288/-/format/auto/-/preview/3000x3000/-/quality/lighter/" width="400" height="100%" alt="knights" title="2 knights" class="center">
 					<figcaption>
 						<h4>Knights</h4>
@@ -48,6 +52,7 @@
 				<p>the Knight jumps in making the shortest move that is not a straight one, an L-shape.</p>
 				<br>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="https://i.shgcdn.com/15cae3de-a8e3-4722-9a38-323be8f97dfd/-/format/auto/-/preview/3000x3000/-/quality/lighter/" width="400" height="100%" alt="bishops" title="2 bishops" class="center">
 					<figcaption>
 						<h4>Bishops</h4>
@@ -56,12 +61,14 @@
 				<p>the Bishop moves diagonally.</p>
 				<br>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="https://i.shgcdn.com/fd8d9c25-b2c4-4b94-81ab-2149853c1966/-/format/auto/-/preview/3000x3000/-/quality/lighter/" width="400" height="100%" alt="queen" title="the queen" class="center">
 				</figure>
 				<figcaption>
 				<h4>Queen (White seats on the light colored square)</h4>
 				</figcaption>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 					<img src="https://i.shgcdn.com/0beee63e-02ec-4fa2-a3cf-ad1a0c997217/-/format/auto/-/preview/3000x3000/-/quality/lighter/" width="400" height="100%" alt="queen" title="the queen" class="center">
 					<figcaption>
 						<h4>Queen (Black seats on the dark colored square)</h4>
@@ -70,6 +77,7 @@
 				<p>the Queen may move like a Rook or a Bishop.</p>
 				<br>
 				<figure>
+				<!-- I used img function to display the image in the site-->
 				<img src="https://i.shgcdn.com/5f372022-67fd-458c-ac6e-5c05c85c067a/-/format/auto/-/preview/3000x3000/-/quality/lighter/" width="400" height="100%" alt="king" title="the king" class="center">
 					<figcaption>
 						<h4>King</h4>
